# jyrkis-qt-app-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  mainwindow.ui
